tests/ui/feature-gates/feature-gate-cfi_encoding.stderr
error[E0658]: the `#[cfi_encoding]` attribute is an experimental feature
  --> $DIR/feature-gate-cfi_encoding.rs:3:1
   |
LL | #[cfi_encoding = "3Bar"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #89653 <https://github.com/rust-lang/rust/issues/89653> for more information
   = help: add `#![feature(cfi_encoding)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
